# mypackage

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: tests.yml
src/mypackage/: __init__.py  _internal_logic.py  core.py  utils.py
tests/: conftest.py  test_example.py
